--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
 </div>
 
-<script src="lib/cordova-1.7.0.js"></script>
+<script src="lib/cordova.js"></script>
 <script src="lib/jquery-1.7.2.min.js"></script>
 <script src="lib/underscore-min.js"></script>
 <script src="lib/backbone-min.js"></script>
